<resources>
    <string name="app_name">FunPlay</string>

    <!--loading_view-->
    <string name="loading_error_text">加载失败,点击重试</string>
    <string name="loading_progress_text">努力加载中...</string>

    <!--user-->
    <string name="edit_name">请输入用户名</string>
    <string name="edit_password">请输入密码</string>

    <!--home_main-->
    <string name="home_top_title_study">学</string>
    <string name="home_top_title_watch">看</string>
    <string name="home_top_title_listen">听</string>
    <string name="home_top_title_personal">我</string>

    <!--tab_study-->
    <string name="loading_study_data">正在为您加载学习数据..</string>
    <string name="loading_study_wait">亲~耐心等候</string>
    <string name="search">搜索</string>
    <string name="study_category_one">安卓之家</string>
    <string name="study_category_two">体系导航</string>
    <string name="study_category_three">干货定制</string>
    <string name="no_name">佚名</string>
    <string name="none_source">无</string>
    <string name="loading">加载中..</string>
    <string name="news_advert">广告</string>
    <string name="gank_title">干货定制</string>
    <string name="select_category">选择分类</string>
    <string name="play_android">玩安卓</string>
    <string name="large_android">大安卓</string>
    <string name="android_source">来源 · </string>
    <string name="string_dian">&#160;·&#160;</string>
    <string name="study_system">知识体系</string>
    <string name="study_navigation">数据导航</string>
    <string name="string_system_category_size">共%s个子分类</string>
    <string name="search_hint">输入搜索内容</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>

    <!--watch-->
    <string name="welfare">美图</string>
    <string name="film_showing">热映榜</string>
    <string name="film_coming">即将上映</string>
    <string name="director">导演：</string>
    <string name="actors">主演：</string>
    <string name="movie_type">类型：</string>
    <string name="movie_score">评分：</string>
    <string name="movie_showing_time">上映时间：</string>
    <string name="movie_time_length">片长：</string>
    <string name="minute">分</string>
    <string name="film_introduce">简介</string>
    <string name="film_actor">演职员</string>
    <string name="film_director">导演</string>
    <string name="film_box_office">票房</string>
    <string name="today_office">今日售票（万）</string>
    <string name="total_office">累计票房（亿）</string>
    <string name="office_rank">累计排名</string>
    <string name="string_empty">""</string>
    <string name="trailer">预告片</string>
    <string name="stills">剧照</string>

    <!--web-->
    <string name="actionbar_webview_share">分享</string>
    <string name="actionbar_webview_cope">复制链接</string>
    <string name="actionbar_webview_open">浏览器打开</string>
    <string name="actionbar_webview_refresh">刷新</string>
    <string name="copy_success">复制成功</string>

    <!--personal-->
    <string name="video_local">本地视频</string>
    <string name="video_download">下载</string>
    <string name="video_collection">收藏</string>
    <string name="video_history">观看记录</string>
    <string name="study_progress">学习进程</string>
    <string name="study_collection">学习收藏</string>
    <string name="study_record">学习记录</string>
    <string name="feed_back">反馈</string>

</resources>
