<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePureScrollMode="true"
        app:srlEnableLoadMore="true"
        app:srlDragRate="0.75">
        <ScrollView
            android:scrollbars="none"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_page_bg">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_page_bg">
                <LinearLayout
                    android:padding="@dimen/dp_15"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">
                    <ImageView
                        android:scaleType="fitXY"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:src="@drawable/empty_head"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:layout_marginLeft="@dimen/dp_10">
                        <TextView
                            android:text="田猛人"
                            android:textSize="@dimen/text_15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textTitleColor" />
                        <TextView
                            android:text="一杯茶，一包烟，一行代码写一天"
                            android:textSize="@dimen/text_13sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:textColor="@color/textDarkGrayColor" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dp_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_1"
                    android:background="@color/colorWhite">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:src="@drawable/video_local"/>
                        <TextView
                            style="@style/text_title_style"
                            android:text="@string/video_local"
                            android:textSize="@dimen/text_13sp"
                            android:layout_marginTop="@dimen/dp_5"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:src="@drawable/video_download"/>
                        <TextView
                            style="@style/text_title_style"
                            android:text="@string/video_download"
                            android:textSize="@dimen/text_13sp"
                            android:layout_marginTop="@dimen/dp_5"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:src="@drawable/collection"/>
                        <TextView
                            style="@style/text_title_style"
                            android:text="@string/video_collection"
                            android:textSize="@dimen/text_13sp"
                            android:layout_marginTop="@dimen/dp_5"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:src="@drawable/video_history"/>
                        <TextView
                            style="@style/text_title_style"
                            android:text="@string/video_history"
                            android:textSize="@dimen/text_13sp"
                            android:layout_marginTop="@dimen/dp_5"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginTop="@dimen/dp_5">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45">
                        <TextView
                            style="@style/text_title_style"
                            android:textSize="@dimen/text_17sp"
                            android:text="@string/study_progress"/>
                        <ImageView
                            style="@style/more_icon_right"/>
                    </RelativeLayout>
                    <View
                        style="@style/horizontal_line"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45">
                        <TextView
                            style="@style/text_title_style"
                            android:textSize="@dimen/text_17sp"
                            android:text="@string/study_collection"/>
                        <ImageView
                            style="@style/more_icon_right"/>
                    </RelativeLayout>
                    <View
                        style="@style/horizontal_line"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45">
                        <TextView
                            style="@style/text_title_style"
                            android:textSize="@dimen/text_17sp"
                            android:text="@string/study_record"/>
                        <ImageView
                            style="@style/more_icon_right"/>
                    </RelativeLayout>
                    <View
                        style="@style/horizontal_line"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45">
                        <TextView
                            style="@style/text_title_style"
                            android:textSize="@dimen/text_17sp"
                            android:text="@string/feed_back"/>
                        <ImageView
                            style="@style/more_icon_right"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</layout>