<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_5">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/ll_category_one"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_height="@dimen/home_category_height"
            android:background="@drawable/study_category_one_shape">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@drawable/study_category_one"/>
            <TextView
                android:textStyle="bold"
                style="@style/text_tab_style"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_14sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/study_category_one"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/ll_category_two"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_height="@dimen/home_category_height"
            android:background="@drawable/study_category_two_shape">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@drawable/study_category_two"/>
            <TextView
                android:textStyle="bold"
                style="@style/text_tab_style"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_14sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/study_category_two"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/ll_category_three"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_height="@dimen/home_category_height"
            android:background="@drawable/study_category_three_shape">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@drawable/study_category_three"/>
            <TextView
                android:textStyle="bold"
                style="@style/text_tab_style"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_14sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/study_category_three"/>
        </LinearLayout>
    </LinearLayout>

</layout>