<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="com.example.jingbin.cloudreader.MainActivity">


        <!--状态栏-->
        <View
            android:id="@+id/view_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_24"
            android:background="@color/colorTheme"
            android:visibility="gone" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorTheme"
            app:contentInsetStart="0.0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarStyle">

            <FrameLayout
                android:id="@+id/ll_title_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:id="@+id/iv_title_menu"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/titlebar_menu" />
            </FrameLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:theme="@style/AppTheme">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_title_study"
                        style="@style/text_tab_style"
                        android:textSize="@dimen/text_18sp"
                        android:text="@string/home_top_title_study"
                        android:textColor="@drawable/home_top_tab_color"
                        android:layout_width="@dimen/home_main_top_tab_width"/>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_title_watch"
                        style="@style/text_tab_style"
                        android:textSize="@dimen/text_18sp"
                        android:text="@string/home_top_title_watch"
                        android:textColor="@drawable/home_top_tab_color"
                        android:layout_width="@dimen/home_main_top_tab_width"/>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_title_personal"
                        style="@style/text_tab_style"
                        android:textSize="@dimen/text_18sp"
                        android:text="@string/home_top_title_personal"
                        android:textColor="@drawable/home_top_tab_color"
                        android:layout_width="@dimen/home_main_top_tab_width"/>
                </LinearLayout>

            </HorizontalScrollView>

        </android.support.v7.widget.Toolbar>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants" />

    </LinearLayout>
</layout>