<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <!--引用bean-->
        <variable
            name="subjectsBean"
            type="com.fun_play.app.datamanager.bean.watch.FilmItemBean" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/img_item_bg"
            android:layout_height="330dp"
            android:layout_width="match_parent"
            android:showImgBg='@{subjectsBean.img}'
            tools:background="@color/colorBtDialog"/>

        <LinearLayout
            android:id="@+id/ll_one_item"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_95"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="@dimen/dp_10"
            android:layout_alignParentStart="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/iv_one_photo"
                    android:layout_marginRight="15dp"
                    tools:ignore="MissingConstraints"
                    android:showMovieImg='@{subjectsBean.img}'
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="@dimen/movie_detail_width"
                    android:layout_height="@dimen/movie_detail_height"
                    android:transitionName="@string/transition_movie_img" />

                <TextView
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:id="@+id/tv_score"
                    style="@style/text_tab_style"
                    android:textSize="@dimen/text_13sp"
                    android:textColor="@color/colorTheme"
                    android:layout_marginLeft="@dimen/dp_5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/iv_one_photo"
                    android:text='@{@string/movie_score+subjectsBean.r}'/>

                <LinearLayout
                    android:id="@+id/ll_director"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_score"
                    app:layout_constraintTop_toBottomOf="@+id/tv_score">
                    <TextView
                        style="@style/text_white_style"
                        android:text="@string/director"
                        android:textSize="@dimen/text_13sp"/>
                    <TextView
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/text_white_style"
                        android:text="@{subjectsBean.dN}"
                        android:textSize="@dimen/text_13sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_actors"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    app:layout_constraintLeft_toLeftOf="@+id/ll_director"
                    app:layout_constraintTop_toBottomOf="@+id/ll_director">
                    <TextView
                        style="@style/text_white_style"
                        android:text="@string/actors"
                        android:textSize="@dimen/text_13sp" />
                    <TextView
                        android:maxLines="2"
                        android:ellipsize="end"
                        style="@style/text_white_style"
                        android:text="@{subjectsBean.actors}"
                        android:textSize="@dimen/text_13sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_type"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    app:layout_constraintLeft_toLeftOf="@+id/ll_actors"
                    app:layout_constraintTop_toBottomOf="@+id/ll_actors">
                    <TextView
                        style="@style/text_white_style"
                        android:textSize="@dimen/text_13sp"
                        android:text="@string/movie_type"/>
                    <TextView
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/text_white_style"
                        android:text="@{subjectsBean.movieType}"
                        android:textSize="@dimen/text_13sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_time_length"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:layout_marginBottom="@dimen/dp_5"
                    app:layout_constraintLeft_toLeftOf="@+id/ll_actors"
                    app:layout_constraintBottom_toTopOf="@+id/ll_show_time">
                    <TextView
                        style="@style/text_white_style"
                        android:textSize="@dimen/text_13sp"
                        android:text="@string/movie_time_length"/>
                    <TextView
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/text_white_style"
                        android:textSize="@dimen/text_13sp"
                        android:text='@{subjectsBean.d+@string/minute}'
                        android:visibility="@{TextUtils.isEmpty(subjectsBean.d)?View.GONE:View.VISIBLE}"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_show_time"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    app:layout_constraintLeft_toLeftOf="@+id/ll_actors"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_one_photo">
                    <TextView
                        style="@style/text_white_style"
                        android:textSize="@dimen/text_13sp"
                        android:text="@string/movie_showing_time"/>
                    <TextView
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/text_white_style"
                        android:textSize="@dimen/text_13sp"
                        android:text='@{subjectsBean.rd}'
                        android:visibility="@{TextUtils.isEmpty(subjectsBean.rd)?View.GONE:View.VISIBLE}"/>
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>