<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bean"
            type="com.fun_play.app.datamanager.bean.watch.FilmItemBean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">
        <android.support.constraint.ConstraintLayout
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">
            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_126"
                android:layout_marginEnd="12dp"
                android:scaleType="fitXY"
                android:showMovieImg="@{bean.img}"
                tools:src="@drawable/img_default_movie" />

            <TextView
                android:ellipsize="end"
                android:textStyle="bold"
                android:id="@+id/tv_title"
                android:singleLine="true"
                android:text="@{bean.tCn}"
                style="@style/text_tab_style"
                android:textSize="@dimen/text_16sp"
                android:layout_marginLeft="@dimen/dp_15"
                android:textColor="@color/textTitleColor"
                app:layout_constraintTop_toTopOf="@+id/iv_cover"
                app:layout_constraintLeft_toRightOf="@+id/iv_cover"/>

            <LinearLayout
                android:id="@+id/ll_director"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title">
                <TextView
                    style="@style/text_tab_style"
                    android:textSize="@dimen/text_13sp"
                    android:text="@string/director"/>
                <TextView
                    style="@style/text_tab_style"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{bean.dN}"
                    android:textSize="@dimen/text_13sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_actors"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_director">
                <TextView
                    style="@style/text_tab_style"
                    android:textSize="@dimen/text_13sp"
                    android:text="@string/actors"/>
                <TextView
                    style="@style/text_tab_style"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{bean.actors}"
                    android:textSize="@dimen/text_13sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_type"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_actors">
                <TextView
                    style="@style/text_tab_style"
                    android:textSize="@dimen/text_13sp"
                    android:text="@string/movie_type"/>
                <TextView
                    style="@style/text_tab_style"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{bean.movieType}"
                    android:textSize="@dimen/text_13sp"/>
            </LinearLayout>

            <TextView
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/text_tab_style"
                android:textSize="@dimen/text_13sp"
                android:layout_marginBottom="@dimen/dp_10"
                app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                app:layout_constraintBottom_toTopOf="@+id/view_line"
                android:text='@{@string/movie_score+bean.r}'/>

            <View
                android:id="@+id/view_line"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_1"
                app:layout_constrainedWidth="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:background="@color/colorLine"
                app:layout_constraintLeft_toRightOf="@+id/iv_cover"
                app:layout_constraintBottom_toBottomOf="@+id/iv_cover"/>
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

</layout>